--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,3 +74,65 @@ input[type="number"]::-webkit-outer-spin-button {
   transform: scale(0);
   transition: transform 0.5s ease;
 }
+
+/* sign in button */
+.ct-signInButton {
+  position: relative;
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0px 10px 20px ();
+  margin-right: 0.75rem;
+  padding-block: 0.4rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(0, 0, 0);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.ct-signInButton:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.ct-signInButton:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.ct-signInButton::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
