--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -136,3 +136,15 @@ input[type="number"]::-webkit-outer-spin-button {
     left: 100%;
   }
 }
+
+/* sign in form  */
+.ct-sign-in-form {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+}
+
+.ct-sign-in-form ::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  color: #aaa;
+}
