--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,7 +54,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /* navbar menu buttons */
 .ct-botton-elegante {
-  padding: 5px 15px;
   cursor: pointer;
   border-radius: 30px;
   transition: all 0.4s ease;
@@ -146,4 +145,19 @@ input[type="number"]::-webkit-outer-spin-button {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
   color: #aaa;
+}
+
+/* fotter background */
+.ct-fotter-bg {
+  background-image: linear-gradient(
+    0deg,
+    hsl(210deg 74% 35%) 0%,
+    hsl(210deg 73% 33%) 0%,
+    hsl(211deg 71% 30%) 2%,
+    hsl(211deg 69% 28%) 4%,
+    hsl(212deg 66% 24%) 8%,
+    hsl(213deg 61% 21%) 16%,
+    hsl(216deg 51% 17%) 31%,
+    hsl(248deg 17% 9%) 98%
+  );
 }
