--- a/frontend/src/components/core/about/ContactUs.css
+++ b/frontend/src/components/core/about/ContactUs.css
@@ -34,15 +34,17 @@
   border-radius: var(--rounded);
   background-size: 400% 400%;
   animation: bg-spin 3s linear 0s infinite normal none running;
-  background-image: radial-gradient(circle farthest-side at 0 100%, #00ccb1, transparent),
+  background-image:
+    radial-gradient(circle farthest-side at 0 100%, #00ccb1, transparent),
     radial-gradient(circle farthest-side at 100% 0, #5ddcff, transparent),
     radial-gradient(circle farthest-side at 100% 100%, #3c67e3, transparent),
     radial-gradient(circle farthest-side at 0 0, #4e00c2, #0000);
 }
 
 .contact-card::after {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow,
-    transform, filter, backdrop-filter;
+  transition-property:
+    color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.5s;
   animation-delay: 0.5s;
